# supertrait

./: Cargo.toml  README.md  publish.sh
.github/workflows/: ci.yaml
macros/: Cargo.toml
macros/src/: generic_visitor.rs  lib.rs
src/: lib.rs  traits.rs
supertrait-macros/: Cargo.toml
tests/: generated.rs  tests.rs  tests2.rs
