[workspace]
members = ["macros"]

[package]
name = "supertrait"
version = "0.0.1"
edition = "2021"
authors = ["sam0x17"]
description = "WIP crate providing default associated types and const fn trait items via some macro hackery"
license = "MIT"
repository = "https://github.com/sam0x17/supertrait"

[dependencies]
supertrait-macros = { path = "macros", version = "0.0.1" }
macro_magic = "0.4"
