[package]
name = "supertrait-macros"
version = "0.0.1"
edition = "2021"
authors = ["sam0x17"]
license = "MIT"
description = "Support macros for supertrait"
repository = "https://github.com/sam0x17/supertrait"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit", "visit-mut"] }
quote = "1"
proc-macro2 = "1"
proc-utils = { version = "0", optional = true }
macro_magic = { version = "0.4", features = ["proc_support"] }
rand = "0.8.5"

[features]
default = []
debug = ["dep:proc-utils"]
